--- a/css/style.css
+++ b/css/style.css
@@ -7,22 +7,46 @@
 }
 body{
     margin: 0 auto;
-    max-width: 1200px;
+    max-width: 1800px;
     font-family: 'roboto', sans-serif;
     background: rgb(2,0,36);
-background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(255,193,245,1) 0%);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(255,193,245,1) 0%);
 }
 
 .Contenido-items > img{
     width:200px;
-    height: 200px;
-  
-  display: flex;
+    height: 200px;  
+    display: flex;
 }
-.container-logotipo >img{
-    width: 250px;
-    height: 250px;
-    margin-left: 10px;
+.header{
+    display: flex;
+    justify-content: space-between;
+    width: 1780px;
+    height: 150px;
+}
+.logo{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+   
+}
+.logo > img {
+    height: 200px;
+    width: 200px;
+}
+.logo > h1{
+    font-size: 25px;
+    text-decoration: double;
+}
+.option > a{
+    margin: 20px 20px 20px 20px;
+    padding-top: 30px;
+    text-decoration: none;
+    color: black;
+}
+.option > a:hover{
+    text-decoration: underline;
+    color: blue;
 }
 .contenido-items >img{
     width: 200px;
@@ -33,14 +57,7 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(255,193,245,1) 0%);
 .icon-cart{
     width: 40px;
     height: 40px;
-
 }
 img{
-    max-width: 100%;
-    
-}
-header{
-    display: flex;
-    justify-content: space-between;
-    padding: 30px 0 40px 0 ;
+    max-width: 100%;   
 }
