--- a/css/style.css
+++ b/css/style.css
@@ -12,52 +12,87 @@ body{
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(255,193,245,1) 0%);
 }
-
-.Contenido-items > img{
-    width:200px;
-    height: 200px;  
-    display: flex;
-}
-.header{
-    display: flex;
-    justify-content: space-between;
-    width: 1780px;
-    height: 150px;
-}
-.logo{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-   
-}
 .logo > img {
     height: 200px;
     width: 200px;
+    
 }
 .logo > h1{
     font-size: 25px;
     text-decoration: double;
+}
+.option{
+    margin-bottom: 30px;
+
 }
 .option > a{
     margin: 20px 20px 20px 20px;
     padding-top: 30px;
     text-decoration: none;
     color: black;
+   
+  
 }
 .option > a:hover{
     text-decoration: underline;
-    color: blue;
+    color: rgb(255, 0, 183);
+    text-decoration: none;
 }
-.contenido-items >img{
+.contenedor >img{
     width: 200px;
     height: 200px;
     margin-left: 30px;
-    border: 2px solid #f574ca;
+   
 }
 .icon-cart{
     width: 40px;
     height: 40px;
 }
 img{
-    max-width: 100%;   
+    /* max-width: 100%;  */
+    /* padding: 8px;  */
+    /* border: 2px solid #f574ca; */
+    /* height: auto;  */
+    width: 200px; 
+  height: auto;
+  margin: 5px; 
+  border: 3px solid transparent; 
+  transition: border 0.5s ease;
+  border-color: #ed6693;
 }
+
+.contenido-items{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+}
+.contenedor{
+   
+    text-align: center;
+    margin: 20px;
+}
+.Contenedor > img{
+    width:50px;
+    height: 50px;  
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+
+    align-items: center;
+ 
+}
+img:hover{
+    box-shadow: 0px 0px 15px rgba(249, 3, 175, 0.5);
+}
+
+.contenedor>button{
+    color: #ffffff;
+    background-color: #ed6693;
+    border-radius: 3px;
+    border-color: #ed6693;
+   
+}
+
+
+
