--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,8 @@ body{
 .logo > img {
     height: 200px;
     width: 200px;
-    
-    
+    box-shadow: none;
+
 }
 .logo > h1{
     font-size: 25px;
@@ -37,7 +37,7 @@ body{
 .option > a:hover{
     text-decoration: underline;
     color: rgb(255, 0, 183);
-    text-decoration: none;
+    
 }
 .contenedor >img{
     width: 200px;
@@ -79,11 +79,10 @@ body{
     margin: 10px;
     display: flex;
     justify-content: center;
-
     align-items: center;
  
 }
-img:hover{
+.contenedor>img:hover{
     box-shadow: 0px 0px 15px rgba(249, 3, 175, 0.5);
 }
 
@@ -97,3 +96,79 @@ img:hover{
 
 
 
+/* Estilos para la imagen en miniatura */
+.contenedor img {
+    max-width: 100%;
+    height: auto;
+    cursor: pointer; /* Cambiar cursor a mano al pasar sobre la imagen */
+}
+
+
+
+
+.lightbox-caption {
+    color: #333; /* Color del texto */
+    font-size: 16px; /* Tamaño de fuente */
+    line-height: 1.5; /* Altura de línea */
+    margin-top: 10px; /* Espacio superior */
+    
+}
+
+/* Estilos para el botón de cierre */
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    font-size: 24px;
+    color: #fc5fdc;
+}
+
+
+
+/* Estilos para el lightbox */
+.lightbox {
+    display: none; /* Inicialmente oculto */
+    position: fixed;
+    z-index: 9999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center; /* Centrar el contenido */
+}
+
+.lightbox-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); /* Centrar vertical y horizontalmente */
+    background-color: #f87ed3; /* Fondo blanco */
+    padding: 100px; /* Espacio interno */
+    display: flex; /* Alinear elementos en un flexbox */
+    align-items: center; /* Alinear verticalmente */
+}
+
+.lightbox-img {
+    max-width: 50%; /* Ancho de la imagen */
+    
+}
+
+.lightbox-text {
+    flex-grow: 1; /* El texto ocupa todo el espacio disponible */
+    padding-left: 20px; /* Espacio entre la imagen y el texto */
+}
+
+.lightbox-caption {
+    color: #000000; /* Color del texto */
+    font-size: 16px; /* Tamaño de fuente */
+    line-height: 1.5; /* Altura de línea */
+    margin: 0; /* Eliminar márgenes */
+    
+}
+.lightbox-img {
+    max-width: 200px; /* Ajusta el ancho máximo de la imagen según sea necesario */
+    max-height: 200px; /* Ajusta la altura máxima de la imagen según sea necesario */
+    float: left; /* Alinea la imagen a la izquierda */
+    margin-right: 20px;
+}
