--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%); /* Centrar vertical y horizontalmente */
-    background-color: #f87ed3; /* Fondo blanco */
+    background-color: #fd90dc; /* Fondo blanco */
     padding: 100px; /* Espacio interno */
     display: flex; /* Alinear elementos en un flexbox */
     align-items: center; /* Alinear verticalmente */
@@ -171,4 +171,14 @@ body{
     max-height: 200px; /* Ajusta la altura máxima de la imagen según sea necesario */
     float: left; /* Alinea la imagen a la izquierda */
     margin-right: 20px;
+}
+.lightbox-text>button{
+    background-color: #d42a87;
+    color: #ffffff;
+    border-color: #d42a87 ;
+}
+#formulario>button{
+    background-color: #d42a87;
+    color: #ffffff;
+    border-color: #d42a87 ;
 }
