--- a/css/style.css
+++ b/css/style.css
@@ -111,8 +111,6 @@ body{
 }
 
 
-
-/* Estilos para la imagen en miniatura */
 .contenedor img {
     max-width: 100%;
     height: auto;
@@ -127,7 +125,6 @@ body{
     
 }
 
-/* Estilos para el botón de cierre */
 .close-btn {
     position: absolute;
     top: 10px;
@@ -138,8 +135,6 @@ body{
 }
 
 
-
-/* Estilos para el lightbox */
 .lightbox {
     display: none; 
     position: fixed;
@@ -202,19 +197,15 @@ footer {
     background:  #ffc1f5;
     padding: 20px 0;
     padding-top: 30px;
-    overflow: hidden; 
-    display: flex; 
-    flex-wrap: wrap; 
-    justify-content: space-evenly;
+   
     margin: auto;
 }
 
 .partFooter {
     width: 22%;
     text-align: center;
+ 
 }
-
-
 
 .partFooter h4 {
     color: #ffffff;
@@ -225,63 +216,24 @@ footer {
     padding: 5px;
     border: 1px solid #cd0090;
     border-radius: 5px;
+    margin: 15px;
 }
 
 .contact {
     margin: 10px;
-    display: block;
-    text-align: left;
-}
-
-.contact > i {
-    float: left;
-    margin: 0 0 0 10px;
-    color: #ffffff;
-    border: 1px solid #000000;
-    border-radius: 50%;
-    height: 30px;
-    width: 30px;
-    line-height: 28px;
-    text-align: center;
-    align-items: center;
+    display: flex;
+    display: inline-block;
+    
 }
 
 .contact > p {
-    margin-left: 50px;
-    align-items: center;
-    line-height: 28px;
-    font-weight: 500;
     color: #000000;
+    display: inline-block;
+
 }
 
-.partFooter > a {
-    display: block;
-    text-decoration: none;
-    color: #000000;
-    margin-bottom: 10px;
-    font-weight: 500;
-    padding: 5px;
+.contact>img{
+    width: 30px;
+    height: 30px;
+    display: inline;
 }
-
-.social-media > a > i {
-    font-size: 20px;
-    display: inline-block; 
-    color: #000000;
-    border: 2px solid #000000;
-    border-radius: 50%; 
-    width: 38px; 
-    height: 38px; 
-    line-height: 36px; 
-    cursor: pointer;
-    margin-top: 20px;
-    text-align: center;
-    transition: all ease-in-out .3s;
-    margin-right: 5px;
-}
-
-.social-media > a > i:hover {
-    color: #000000;
-    background-color: #cd0090;
-    border-color: #cd0090;
-}
-
